--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,14 @@ matrix:
      - os: linux
        dist: trusty
        compiler: clang
+       env: NODE_VERSION="14"
+       addons:
+         apt:
+            sources: [ 'ubuntu-toolchain-r-test','llvm-toolchain-precise-3.5', 'gcc-multilib', 'g++-multilib', 'libsqlite3-dev:i386' ]
+            packages: [ 'clang-3.5', 'libstdc++-4.9-dev']
+     - os: linux
+       dist: trusty
+       compiler: clang
        env: NODE_VERSION="13"
        addons:
          apt:
@@ -41,14 +49,10 @@ matrix:
          apt:
             sources: [ 'ubuntu-toolchain-r-test','llvm-toolchain-precise-3.5', 'gcc-multilib', 'g++-multilib', 'libsqlite3-dev:i386' ]
             packages: [ 'clang-3.5', 'libstdc++-4.9-dev']
-     - os: linux
-       compiler: clang
-       env: NODE_VERSION="10"
-       addons:
-         apt:
-            sources: [ 'ubuntu-toolchain-r-test','llvm-toolchain-precise-3.5', 'gcc-multilib', 'g++-multilib', 'libsqlite3-dev:i386' ]
-            packages: [ 'clang-3.5', 'libstdc++-4.9-dev']
      # OS X
+     - os: osx
+       compiler: clang
+       env: NODE_VERSION="14" # node abi 83
      - os: osx
        compiler: clang
        env: NODE_VERSION="13" # node abi 79
@@ -58,9 +62,6 @@ matrix:
      - os: osx
        compiler: clang
        env: NODE_VERSION="11" # node abi 67
-     - os: osx
-       compiler: clang
-       env: NODE_VERSION="10" # node abi 64
      # electron Linux
      - os: linux
        compiler: clang
