prebuilt: add electron 9.0, 8.3 and 7.3

--- a/.travis.yml
+++ b/.travis.yml
@@ -65,6 +65,22 @@ matrix:
      # electron Linux
      - os: linux
        compiler: clang
+       env: NODE_VERSION="12" ELECTRON_VERSION="9.0.0"
+       dist: trusty
+       addons:
+         apt:
+           sources: [ 'ubuntu-toolchain-r-test','llvm-toolchain-precise-3.5', 'gcc-multilib', 'g++-multilib', 'libsqlite3-dev:i386' ]
+           packages: [ 'clang-3.5', 'libstdc++-4.9-dev']
+     - os: linux
+       compiler: clang
+       env: NODE_VERSION="12" ELECTRON_VERSION="8.3.0"
+       dist: trusty
+       addons:
+         apt:
+           sources: [ 'ubuntu-toolchain-r-test','llvm-toolchain-precise-3.5', 'gcc-multilib', 'g++-multilib', 'libsqlite3-dev:i386' ]
+           packages: [ 'clang-3.5', 'libstdc++-4.9-dev']
+     - os: linux
+       compiler: clang
        env: NODE_VERSION="12" ELECTRON_VERSION="8.2.0"
        dist: trusty
        addons:
@@ -87,6 +103,14 @@ matrix:
          apt:
             sources: [ 'ubuntu-toolchain-r-test','llvm-toolchain-precise-3.5', 'gcc-multilib', 'g++-multilib', 'libsqlite3-dev:i386' ]
             packages: [ 'clang-3.5', 'libstdc++-4.9-dev']
+     - os: linux
+       compiler: clang
+       env: NODE_VERSION="12" ELECTRON_VERSION="7.3.0"
+       dist: trusty
+       addons:
+         apt:
+           sources: [ 'ubuntu-toolchain-r-test','llvm-toolchain-precise-3.5', 'gcc-multilib', 'g++-multilib', 'libsqlite3-dev:i386' ]
+           packages: [ 'clang-3.5', 'libstdc++-4.9-dev']
      - os: linux
        compiler: clang
        env: NODE_VERSION="12" ELECTRON_VERSION="7.2.0"
@@ -130,6 +154,12 @@ matrix:
      # electron MacOs
      - os: osx
        compiler: clang
+       env: NODE_VERSION="12" ELECTRON_VERSION="9.0.0"
+     - os: osx
+       compiler: clang
+       env: NODE_VERSION="12" ELECTRON_VERSION="8.3.0"
+     - os: osx
+       compiler: clang
        env: NODE_VERSION="12" ELECTRON_VERSION="8.2.0"
      - os: osx
        compiler: clang
@@ -137,6 +167,9 @@ matrix:
      - os: osx
        compiler: clang
        env: NODE_VERSION="12" ELECTRON_VERSION="8.0.0"
+     - os: osx
+       compiler: clang
+       env: NODE_VERSION="12" ELECTRON_VERSION="7.3.0"
      - os: osx
        compiler: clang
        env: NODE_VERSION="12" ELECTRON_VERSION="7.2.0"
