--- a/appveyor.yml
+++ b/appveyor.yml
@@ -20,6 +20,26 @@ environment:
     - nodejs_version: 12
       platform: x64
       NODE_RUNTIME: electron
+      NODE_RUNTIME_VERSION: 9.0.0
+      TOOLSET_ARGS: --dist-url=https://electronjs.org/headers
+    - nodejs_version: 12
+      platform: x86
+      NODE_RUNTIME: electron
+      NODE_RUNTIME_VERSION: 9.0.0
+      TOOLSET_ARGS: --dist-url=https://electronjs.org/headers
+    - nodejs_version: 12
+      platform: x64
+      NODE_RUNTIME: electron
+      NODE_RUNTIME_VERSION: 8.3.0
+      TOOLSET_ARGS: --dist-url=https://electronjs.org/headers
+    - nodejs_version: 12
+      platform: x86
+      NODE_RUNTIME: electron
+      NODE_RUNTIME_VERSION: 8.3.0
+      TOOLSET_ARGS: --dist-url=https://electronjs.org/headers
+    - nodejs_version: 12
+      platform: x64
+      NODE_RUNTIME: electron
       NODE_RUNTIME_VERSION: 8.2.0
       TOOLSET_ARGS: --dist-url=https://electronjs.org/headers
     - nodejs_version: 12
@@ -46,6 +66,16 @@ environment:
       platform: x86
       NODE_RUNTIME: electron
       NODE_RUNTIME_VERSION: 8.0.0
+      TOOLSET_ARGS: --dist-url=https://electronjs.org/headers
+    - nodejs_version: 12
+      platform: x64
+      NODE_RUNTIME: electron
+      NODE_RUNTIME_VERSION: 7.3.0
+      TOOLSET_ARGS: --dist-url=https://electronjs.org/headers
+    - nodejs_version: 12
+      platform: x86
+      NODE_RUNTIME: electron
+      NODE_RUNTIME_VERSION: 7.3.0
       TOOLSET_ARGS: --dist-url=https://electronjs.org/headers
     - nodejs_version: 12
       platform: x64
