--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,5 +1,9 @@
 environment:
   matrix:
+    - nodejs_version: 10
+      platform: x64
+    - nodejs_version: 10
+      platform: x86
     - nodejs_version: 11
       platform: x64
     - nodejs_version: 11
