--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "mocha": "^5.2.0"
   },
   "peerDependencies": {
-    "node-gyp": "3.x"
+    "node-gyp": "7.0.0"
   },
   "peerDependenciesMeta": {
     "node-gyp": {
@@ -58,7 +58,7 @@
     }
   },
   "optionalDependencies": {
-    "node-gyp": "3.x"
+    "node-gyp": "7.0.0"
   },
   "scripts": {
     "install": "node-pre-gyp install --fallback-to-build",
