--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "@mapbox/cloudfriend": "^1.9.0",
     "aws-sdk": "2.x",
     "eslint": "3.5.0",
-    "mocha": "^5.2.0"
+    "jest": "^26.6.3"
   },
   "peerDependencies": {
     "node-gyp": "3.x"
@@ -64,7 +64,8 @@
   "scripts": {
     "install": "node-pre-gyp install --fallback-to-build",
     "pretest": "node test/support/createdb.js",
-    "test": "mocha -R spec --timeout 480000",
+    "test": "jest --testTimeout=480000",
+    "coverage": "jest --coverage --testTimeout=480000",
     "pack": "node-pre-gyp package"
   },
   "license": "BSD-3-Clause",
