--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
   },
   "dependencies": {
     "node-addon-api": "^3.0.0",
-    "node-pre-gyp": "^1.0.0"
+    "@mapbox/node-pre-gyp": "^1.0.0"
   },
   "devDependencies": {
     "@mapbox/cloudfriend": "^1.9.0",
