--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
   },
   "dependencies": {
     "node-addon-api": "^3.0.0",
-    "node-pre-gyp": "^0.11.0"
+    "@mapbox/node-pre-gyp": "^1.0.0"
   },
   "devDependencies": {
     "@mapbox/cloudfriend": "^1.9.0",
@@ -50,7 +50,7 @@
     "mocha": "^5.2.0"
   },
   "peerDependencies": {
-    "node-gyp": "3.x"
+    "node-gyp": "7.x"
   },
   "peerDependenciesMeta": {
     "node-gyp": {
@@ -58,7 +58,7 @@
     }
   },
   "optionalDependencies": {
-    "node-gyp": "3.x"
+    "node-gyp": "7.x"
   },
   "scripts": {
     "install": "node-pre-gyp install --fallback-to-build",
