--- a/package.json
+++ b/package.json
@@ -40,8 +40,8 @@
     "url": "git://github.com/mapbox/node-sqlite3.git"
   },
   "dependencies": {
-    "node-addon-api": "^3.0.0",
-    "@mapbox/node-pre-gyp": "^1.0.0"
+    "node-addon-api": "^3.2.1",
+    "@mapbox/node-pre-gyp": "^1.0.5"
   },
   "devDependencies": {
     "@mapbox/cloudfriend": "^1.9.0",
@@ -50,7 +50,7 @@
     "mocha": "^5.2.0"
   },
   "peerDependencies": {
-    "node-gyp": "7.x"
+    "node-gyp": "8.1.0"
   },
   "peerDependenciesMeta": {
     "node-gyp": {
@@ -58,7 +58,7 @@
     }
   },
   "optionalDependencies": {
-    "node-gyp": "7.x"
+    "node-gyp": "8.1.0"
   },
   "scripts": {
     "install": "node-pre-gyp install --fallback-to-build",
