--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -79,3 +79,42 @@ jobs:
         if: matrix.node == 16 && startsWith(github.ref, 'refs/tags/')
         env:
           NODE_PRE_GYP_GITHUB_TOKEN: ${{ github.token }}
+
+  build-alpine:
+    name: alpine x64 - Node 16
+    if: github.event_name == 'workflow_dispatch' || startsWith(github.ref, 'refs/tags/') || github.event_name == 'pull_request'
+    runs-on: ubuntu-latest
+    container: node:16-alpine
+    steps:
+      - uses: actions/checkout@v3
+      - run: apk add build-base python3 --update-cache
+
+      - name: Install dependencies
+        run: npm install --ignore-scripts
+
+      - name: Configure build
+        run: npx node-pre-gyp configure
+
+      - name: Build binaries
+        run: npx node-pre-gyp build
+
+      - name: Run tests
+        run: npm run test
+
+      - name: Package prebuilt binaries
+        run: npx node-pre-gyp package
+
+      - name: Upload binaries to commit artifacts
+        uses: actions/upload-artifact@v3
+        if: matrix.node == 16
+        with:
+          name: prebuilt-binaries
+          path: build/stage/*/*
+          retention-days: 7
+
+      - name: Upload binaries to GitHub Release
+        run: npx node-pre-gyp-github publish
+        if: matrix.node == 16 && startsWith(github.ref, 'refs/tags/')
+        env:
+          NODE_PRE_GYP_GITHUB_TOKEN: ${{ github.token }}
+
